# Rewind

./: .gitignore  Cargo.toml  README.md  index.html  overlay.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
crates/rewind-adapters/: Cargo.toml
crates/rewind-adapters/src/: lib.rs  overlay.rs
crates/rewind-adapters/src/idle/: degraded.rs  mod.rs  user_idle.rs  wayland.rs
crates/rewind-core/: Cargo.toml
crates/rewind-core/src/: clock.rs  config.rs  engine.rs  events.rs  lib.rs  ports.rs
crates/rewind-core/src/exercises/: catalog.rs  mod.rs
crates/rewind-core/src/idle/: mod.rs  policy.rs
crates/rewind-core/src/model/: aggregate.rs  break_record.rs  hydration.rs  mod.rs  session.rs
crates/rewind-core/src/scheduler/: coordinator.rs  hydration.rs  mod.rs  posture.rs  reminder.rs
crates/rewind-core/src/session/: machine.rs  mod.rs  state.rs
crates/rewind-storage/: Cargo.toml
crates/rewind-storage/migrations/: 0001_init.sql
crates/rewind-storage/src/: lib.rs  repo.rs  storage_error.rs
crates/rewind-storage/src/repo/: tests.rs
docs/: .placeholder
scripts/: fix-macos-v0.1.0.sh  uninstall-linux.sh  uninstall-macos.sh  uninstall-windows.ps1
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: adapters.rs  config_store.rs  idle_handle.rs  ipc.rs  lib.rs  overlay_adapter.rs  runtime.rs  storage_app.rs  storage_helpers.rs  uninstall.rs  wiring.rs
src/lib/: ipc.ts  onboarding.svelte.ts  stores.svelte.ts  tokens.css  types.ts
src/overlay/: Overlay.svelte  main.ts
src/overlay/exercises/: Blink.svelte  FigureEight.svelte  NearFar.svelte  Palming.svelte
src/routes/: Dashboard.svelte  Onboarding.svelte  Settings.svelte  Stats.svelte
